[package]
name = "cs-240-library"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
anyhow = { version = "1.0.79", optional = true }
tailcall = "1.0.1"

[debug.dependencies]
proptest = "1.4.0"
prusti-contracts = "0.2.0"

[features]
anyhow = ["dep:anyhow"]
serde = ["dep:serde"]
